# load_datawarehouse

./: .gitignore  README.md  setup.cfg
src/load_datawarehouse/: __init__.py  classes.py  config.py  data.py  exceptions.py  schema.py
src/load_datawarehouse/api/: README.md  __init__.py  aws_redshift.py  google_bigquery.py
src/load_datawarehouse/bigquery/: README.md  __init__.py  config.py  schema.py
src/load_datawarehouse/redshift/: README.md  __init__.py
src/load_datawarehouse/snowflake/: __init__.py
test/: test_bigquery.py  test_load_datawarehouse.py
