[metadata]
name = load_datawarehouse
version = 0.0.1

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    pyarrow
    pytz
    # importlib
    # boto3>=1.20.24
    # google-cloud-bigquery>=2.31.0

[options.extras_require]
tests =
    env_context @ git+https://github.com/denwong47/env_context
    dict_tree @ git+https://github.com/denwong47/dict_tree
    ordered_set @ git+https://github.com/denwong47/ordered_set

[options.packages.find]
where=src
